Upcoming:
- Fixed a problem with the bedrock layer generating at 0 under city buildings

1.18-5.0.1:
- Better at preventing cities where there are villages

1.18-5.0.0:
- First port of Lost Cities to 1.18

1.16-4.0.10-beta:
- Fixed the problem where beds would explode right after teleporting to and from the Lost City dimension

1.16-4.0.9-beta:
- Added back the specialBedBlock config (in lostcities-server.toml) so that you can change the diamond block under the bed
- It is now possible to specify blocks using the standard BlockState format in the palette (for example: minecraft:quartz_slab[type=bottom]) giving many more options for custom assets

1.16-4.0.8-beta:
- Fixed a problem with creation of multiple worlds where the settings of the first world would persist for future worlds. This also fixes the saving of the selected profile in serverconfig/lostcities-server.toml

1.16-4.0.7-beta:
- Fixed loot and spawner generation so that it happens more consistently now

1.16-4.0.6-alpha:
- The ILostCities API is back

1.16-4.0.5-alpha:
- The 'assets' configuration works again so you can reconfigure how Lost Cities looks
- All configuration files for Lost Cities are now in 'config/lostcities'. That makes it easier to find
- There is a new examples/conditions.json which you can use as a sample to reconfigure loot and spawners

1.16-4.0.4-alpha:
- Temporary 'fix' to avoid what looks like a bug in Vanilla when clearing out large sections of a chunk. This bug manifests itself when clearing up chunks after being damaged by an explosion
- Better city generation with 'floating' landscape type by improving the way the height of a chunk is detected
- New 'cityAvoidVoid' config option: Only used with floating landscape type: if true an additional detection is done to see if the chunk is void and in that case the city isn't generated there. Otherwise you might get city chunks on the border of islands which sometimes looks weird