@@ -1,4 +1,5 @@
 Upcoming:
+- Properly fixed the problem on single player where exiting the world would not reset everything and keep settings for the next created world
 - Fixed a problem with the bedrock layer generating at 0 under city buildings
 
 1.18-5.0.1:
